Adding logic to fail processing.
